code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note3

14-Apr-2013 Michael Babker
 ^ [#30541] Small fixes to batch processing layouts.  Thanks Elin Waring
 # [#30396] Enabling finder plugins breaks tags saving
 # [#29240] Undefined property: JSite::$registeredurlparams.  Thanks Mark Stanton

13-Apr-2013 Mark Dexter
 # [#30560] Tagged Item menu options Child Tags always saves as Include. Thanks Elin.
 # [#30559] 'joomla_310.ddfre_updates' doesn't exist

-------------------- 3.1 Beta 4 Release [12-Apr-2012] ------------------

12-Apr-2013 Mark Dexter
 # [#30523] Fix Tag Batch Creation and Tag Library Cleanup. Thanks David and Elin.
 # [#30553] jos_contentitem_tag_map error.

12-Apr-2013 Jean-Marie Simonet
 # [#30538] Joomla Update Options button displays even if you don't have permission. Thanks Mark Dexter
 # [#30532] Extension Manager -> Database not displaying Other Information tab. Thanks Mark Dexter
 $ [#30511] Capitalise Custom output title (en-GB only). Thanks Brian Teeman
 # [#30537] Menus with default view in URL and sub-tasks are missing in other defined attributes and do not display correctly in menu type input in backend. Thanks Beat
 # [#30446] Fix Strict warning 'Attribute already exists'. Thanks Piotr Konieczny
 # [#30539] *Memcache cache time issue. Thanks Ofer Cohen and sajal soni
 # [#30154] Allow ability to upload file (eg: profile picture) through com_users registration view. Thanks Cy Lee

11-Apr-2013 Jean-Marie Simonet
 #$ [#30534] Missing Help Button in Joomla! Update component. Thanks Mark Dexter

10-Apr-2013 Mark Dexter
 # [#30466] Tags: Not shown in contacts. Thanks Peter Bui.

08-Apr-2013 Michael Babker
 # [#29916] MySQL connections are not closed.  Thanks Ian Goldstein
 # [#30508] Fixed typo $text = $text = '..';.  Thanks Piotr Konieczny
 # [#30504] List All Tags doesn't have pagination.  Thanks Mark Dexter